; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_gui_photon.c_gui_mch_get_font.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_gui_photon.c_gui_mch_get_font.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i64 0, align 8
@e_font = common dso_local global i32 0, align 4
@FAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gui_mch_get_font(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 12, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = call i64 @gui_ph_parse_font_name(i32* %10, i32** %6, i32* %9, i32* %8)
  %12 = load i64, i64* @FALSE, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %27

14:                                               ; preds = %2
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32* @gui_ph_get_font(i32* %15, i32 %16, i32 %17, i32 -1)
  store i32* %18, i32** %7, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @vim_free(i32* %19)
  %21 = load i32*, i32** %7, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %23, label %26

23:                                               ; preds = %14
  %24 = load i32*, i32** %7, align 8
  %25 = ptrtoint i32* %24 to i32
  store i32 %25, i32* %3, align 4
  br label %36

26:                                               ; preds = %14
  br label %27

27:                                               ; preds = %26, %2
  %28 = load i32, i32* %5, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %34

30:                                               ; preds = %27
  %31 = load i32, i32* @e_font, align 4
  %32 = load i32*, i32** %4, align 8
  %33 = call i32 @EMSG2(i32 %31, i32* %32)
  br label %34

34:                                               ; preds = %30, %27
  %35 = load i32, i32* @FAIL, align 4
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %34, %23
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i64 @gui_ph_parse_font_name(i32*, i32**, i32*, i32*) #1

declare dso_local i32* @gui_ph_get_font(i32*, i32, i32, i32) #1

declare dso_local i32 @vim_free(i32*) #1

declare dso_local i32 @EMSG2(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
